# zoo-calrissian-runner

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  coverage.xml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json  environment.yml
.github/workflows/: build-and-test.yml  docs.yml  package.yml
app-packages/: dNBR.cwl
assets/: maincwl.yaml  rules.yaml  stagein.yaml  stageout.yaml
conda.recipe/: meta.yaml
docs/: configuration.md  environment.yml  index.md  installation.md  started.md
docs/api/zoo_calrissian_runner/: handlers.md  index.md
tests/: .env  app-burned-area.1.0.cwl  app-s-expression.dev.0.0.2.cwl  app-s2-composites.0.1.0.cwl  test_dnbr_service.py  test_runner.py  test_s2_app_burned.py  test_s2_composite.py  test_s2_s_expressions.py  test_workflow.py  test_zoo_conf.py
tests/app-packages/: README.md  app-package-1.cwl  app-package-2.cwl  app-package-3.cwl  app-package-4.cwl
tests/dbnr/: service.py
tests/dnbr/: app-package.cwl  service.py
zoo_calrissian_runner/: __init__.py  handlers.py
